--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
    <body>
       <header>
          <nav>
+            <a href="./index.html">WebStudio</a>
+
             <ul>
-               <li><a href="index.html">WEBSTUDIO</a></li>
-               <li>Studio</li>
-               <li>Portfolio</li>
-               <li>Contacts</li>
+               <li><a href="">Studio</a></li>
+               <li><a href="">Portfolio</a></li>
+               <li><a href="">Contacts</a></li>
             </ul>
          </nav>
 
-         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-         </ul>
+         <address>
+            <ul>
+               <li>
+                  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+               </li>
+               <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+         </address>
       </header>
 
       <main>
@@ -75,21 +80,21 @@
                   <img
                      src="./images/screen.jpg"
                      alt="Screen when showed a new project"
-                     width="300"
+                     width="360"
                   />
                </li>
                <li>
                   <img
                      src="./images/phones.jpg"
                      alt="Development of the mobile application"
-                     width="300"
+                     width="360"
                   />
                </li>
                <li>
                   <img
                      src="./images/phone-pc.jpg"
                      alt="Mobile application testing"
-                     width="300"
+                     width="360"
                   />
                </li>
             </ul>
@@ -136,7 +141,7 @@
       </main>
 
       <footer>
-         <a href="index.html">WEBSTUDIO</a>
+         <a href="./index.html">WEBSTUDIO</a>
 
          <p>
             Increase the flow of customers and sales for your business with
